assets/styles/index.scss
$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
@import '~bootstrap-sass/assets/stylesheets/bootstrap';

body {
  background: url('./img/lagoonnebula.jpg') center;
  display: block;
  margin: 0px;
  padding: 0px;
  border:none;
  background-repeat:no-repeat;
  background-size:cover;
  background-position:center;
  outline:none;
  color: #f0720a;
  font-family:system-ui;
}

h1 {
  margin-left: 10px;
  // color: #dbdef0;
  color: #8d9ce7;
}

li {
  margin-left: 50px;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 0 .063em #154969;
  cursor:pointer;
  font: bold 1.8rem;
  // color: #d1d4f0;
  // color: #d3e37f;
  color: #f0720a;
}


p {
  color: #8d9ce7;
}

legend {
  color: #8d9ce7;
  border:none;
}

form {
  float:none;
  border:none;
  padding: .938em 1.875em;
  text-decoration: none;
  text-transform: title;
  text-shadow: 0 .063em #154969;
  cursor:pointer;
  font: bold 1.8rem;
  color: #8e9097;
}
input[type=text] {
    float:none;
    display: inline-block;
    padding: .938em 1.875em;
    border: .094em solid #892667;
    border-radius: .625em;
    background-color: #dbdef0;
    box-shadow: 0 .375em .313em -0.313em #6ac531, inset 0 .063em #4da117, inset 0 -0.188em #b1ce7d;
    color: #3f60ba;
    text-decoration: none;
    text-transform: uppercase;
    text-shadow: 0 .063em #eff1f6;
    cursor:pointer;
    font: bold 1.8rem;
}

input[type=password] {
    float:none;
    display: inline-block;
    padding: .938em 1.875em;
    border: .094em solid #829c5d;
    border-radius: .625em;
    background-color: #dbdef0;
    box-shadow: 0 .375em .313em -0.313em #6ac531, inset 0 .063em #244b0b, inset 0 -0.188em #b1ce7d;
    color: #3f60ba;
    text-decoration: none;
    text-transform: uppercase;
    text-shadow: 0 .063em #154969;
    cursor:pointer;
    font: bold 1.8rem;
}

input[type=submit] {
  float:left;
  display: inline-block;
  padding: .938em 1.875em;
  border: .094em solid #829c5d;
  border-radius: .625em;
  background-color: #dbdef0;
  box-shadow: 0 .375em .313em -0.313em #6ac531, inset 0 .063em #4da117, inset 0 -0.188em #b1ce7d;
  color: #3f60ba;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 0 .063em #154969;
  cursor:pointer;
  font: bold 1.8rem;
}

fieldset {
  border:none;
  color: #eff1f6;
}

.column1 {
  float:left;
  margin:0;
  width:33%;
  column-fill: balance;
  border-radius: white;
}

.column2 {
  float:left;
  margin:0;
  width:33%;
  column-fill: balance;
  border-radius: white;
}

.column3 {
  float:left;
  margin:0;
  width:33%;
  column-fill: balance;
  border-radius: white;
}

.hiding {
  display: none;
}

.btn {
  float:left;
  display: inline-block;
  padding: .938em 1.875em;
  border: .094em solid #829c5d;
  border-radius: .625em;
  background-color: #dbdef0;
  box-shadow: 0 .375em .313em -0.313em #6ac531, inset 0 .063em #4da117, inset 0 -0.188em #b1ce7d;
  color: #3f60ba;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 0 .063em #154969;
  cursor:pointer;
  font: bold 1.8rem;
}
.btn:hover {
   background-color: #dbdef0;
   box-shadow: 0 .125em #3a4d90, inset 0 .063em #c5e7b0, inset 0 -0.188em #154969;
}
.btn:active {
   box-shadow: inset 0 0 1.094em #8e9098, inset 0 .063em #390668, inset 0 -0.188em #682CA0, 0 .063em #6e922f;
}

.auth-btn {
  float:none;
  display: inline-block;
  padding: .938em 1.875em;
  border: .094em solid #829c5d;
  border-radius: .625em;
  background-color: #dbdef0;
  box-shadow: 0 .375em .313em -0.313em #6ac531, inset 0 .063em #4da117, inset 0 -0.188em #b1ce7d;
  color: #3f60ba;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 0 .063em #154969;
  cursor:pointer;
  font: bold 1.8rem;
}

.auth-btn:hover {
   background-color: #d2d3f4;
   box-shadow: 0 .125em #3a4d90, inset 0 .063em #c5e7b0, inset 0 -0.188em #154969;
}
.auth-btn:active {
   box-shadow: inset 0 0 1.094em #8e9098, inset 0 .063em #390668, inset 0 -0.188em #682CA0, 0 .063em #6e922f;
}

.auth-input {
  float:left;
  display: inline-block;
  padding: .938em 1.875em;
  border: .094em solid #829c5d;
  border-radius: .625em;
  background-color: #dbdef0;
  box-shadow: 0 .375em .313em -0.313em #6ac531, inset 0 .063em #4da117, inset 0 -0.188em #b1ce7d;
  color: #3f60ba;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 0 .063em #154969;
  cursor:pointer;
  font: bold 1.8rem;
}

.list-id-input .list-title-input .list-backstory-input .list-stopper-input .list-status-input .list-deleted_flag-input {
  float:left;
  display: inline-block;
  padding: .938em 1.875em;
  border: .094em solid #829c5d;
  border-radius: .625em;
  background-color: #dbdef0;
  box-shadow: 0 .375em .313em -0.313em #6ac531, inset 0 .063em #4da117, inset 0 -0.188em #b1ce7d;
  color: #3f60ba;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 0 .063em #154969;
  cursor:pointer;
  font: bold 1.8rem;
}

.list-id-input .list-title-input .list-backstory-input .list-stopper-input .list-status-input .list-deleted_flag-input:hover {
  background-color: #c8ea14;
  box-shadow: 0 .125em #3a4d90, inset 0 .063em #c5e7b0, inset 0 -0.188em #154969;
}

.list-id-input .list-title-input .list-backstory-input .list-stopper-input .list-status-input .list-deleted_flag-input:active {
   box-shadow: inset 0 0 1.094em #51b207, inset 0 .063em #390668, inset 0 -0.188em #682CA0, 0 .063em #6e922f;
}

.list-button-div {
  float: none;
}

h2 {
  // color: #cbcdd4;
  // color: #f0720a;
  // color: #dbdef0;
  color: #8d9ce7;
  // color: #0c2d85;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 0 .063em #154969;
  cursor:pointer;
  font: bold 1.8rem;
}

#showAllLists,#addNewList, #showOneList, #updateOneList, #clearList, #removeOneList {
  float:none;
}

#showAllLists {
  margin-left: 25px;
}

#tagline {
  color: #8d9ce7;
}

#addListFailure {
  color: ec0dcc;
  // font: italic;
}

.hiding {
  display: none;
}

.fb-like {
  color: #d1d4f0;
}

.special-note {
    font: bold .8rem;
    // color: #ec720d;
    // color: #0c47c5;
    color: white;
}

